# supervisor_agent

./: .gitignore  Agent.md  README.md  pyproject.toml  sensitive_words.txt
src/agent_demo/: __init__.py
src/agent_demo/llm/: __init__.py  client.py  module.py  prompt_builder.py  tool_loop.py  types.py
src/agent_demo/memory/: __init__.py  embedder.py  long_term.py  manager.py  module.py  rel_store.py  session_store.py  types.py  vector_store.py  working_memory.py
src/agent_demo/orchestrator/: __init__.py  config.py  orchestrator.py
src/agent_demo/perception/: __init__.py  adapter.py  message.py  module.py  pipeline.py  router.py
src/agent_demo/perception/filters/: __init__.py  base.py  denoise.py  language.py  sensitive.py  truncation.py
src/agent_demo/perception/processors/: __init__.py  base.py  file.py  text.py
src/agent_demo/perception/processors/readers/: __init__.py  base.py  docx_reader.py  image_reader.py  markdown_reader.py  pdf_reader.py  pptx_reader.py  text_reader.py
src/agent_demo/planning/: __init__.py  executor.py  module.py  prompt_builder.py  types.py
src/agent_demo/tools/: __init__.py  executor.py  module.py  registry.py  types.py
tests/: test_llm.py  test_memory.py  test_orchestrator.py  test_perception.py  test_planning.py  test_tools.py
tests/samples/: ocr_05.md
