[project]
name = "agent-demo"
version = "0.1.0"
description = "Agent Demo Project - 感知模块"
requires-python = ">=3.12"
dependencies = [
    "langdetect>=1.0.9",
    "python-pptx>=0.6.21",
    "python-docx>=1.1.0",
    "pymupdf>=1.24.0",
    "rapidocr-onnxruntime>=1.3.0",
    "openai>=2.44.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
